--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Últimos Trabalhos</title>
+  </head>
+  <body>
+    <header>
+      <h4>Recentes</h4>
+      <h1>Trabalhos</h1>
+    </header>
+    <main>
+      <div class="card">
+        <img src="" alt="" />
+        <h2><span>Design</span>Sofa</h2>
+      </div>
+      <div class="card">
+        <img src="" alt="" />
+        <h2><span>Branding</span>KeyBoard</h2>
+      </div>
+      <div class="card">
+        <img src="" alt="" />
+        <h2><span>Illustration</span>Work Media</h2>
+      </div>
+    </main>
+  </body>
 </html>
