index and css update

--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Últimos Trabalhos</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400;800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
@@ -12,16 +19,25 @@
     </header>
     <main>
       <div class="card">
-        <img src="" alt="" />
-        <h2><span>Design</span>Sofa</h2>
+        <img
+          src="https://images.unsplash.com/photo-1522920192563-6df902920a8a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1173&q=80"
+          alt="Imagem de uma Placa mae com o foco no soquete do processador"
+        />
+        <h2><span>Manutenção</span>Eletrônicos</h2>
       </div>
       <div class="card">
-        <img src="" alt="" />
-        <h2><span>Branding</span>KeyBoard</h2>
+        <img
+          src="https://images.unsplash.com/photo-1604754742629-3e5728249d73?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
+          alt="Imagem de um técnico instalando uma placa de video em um pc desktop "
+        />
+        <h2><span>Montagem</span>Desktops</h2>
       </div>
       <div class="card">
-        <img src="" alt="" />
-        <h2><span>Illustration</span>Work Media</h2>
+        <img
+          src="https://images.unsplash.com/photo-1627281795244-0f5db916344a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1085&q=80"
+          alt="Imagem de um pc gamer com rgb"
+        />
+        <h2><span>Orçamento</span>Pc Gamer</h2>
       </div>
     </main>
   </body>
