index and style updated

--- a/index.html
+++ b/index.html
@@ -13,32 +13,50 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
-      <h4>Recentes</h4>
-      <h1>Trabalhos</h1>
-    </header>
-    <main>
-      <div class="card">
-        <img
-          src="https://images.unsplash.com/photo-1522920192563-6df902920a8a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1173&q=80"
-          alt="Imagem de uma Placa mae com o foco no soquete do processador"
-        />
-        <h2><span>Manutenção</span>Eletrônicos</h2>
-      </div>
-      <div class="card">
-        <img
-          src="https://images.unsplash.com/photo-1604754742629-3e5728249d73?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
-          alt="Imagem de um técnico instalando uma placa de video em um pc desktop "
-        />
-        <h2><span>Montagem</span>Desktops</h2>
-      </div>
-      <div class="card">
-        <img
-          src="https://images.unsplash.com/photo-1627281795244-0f5db916344a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1085&q=80"
-          alt="Imagem de um pc gamer com rgb"
-        />
-        <h2><span>Orçamento</span>Pc Gamer</h2>
-      </div>
-    </main>
+    <div class="page">
+      <header>
+        <h4>Recentes</h4>
+        <h1>Trabalhos</h1>
+      </header>
+      <main>
+        <div class="colA">
+          <div class="card">
+            <img
+              src="https://images.unsplash.com/photo-1522920192563-6df902920a8a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1173&q=80"
+              alt="Imagem de uma Placa mae com o foco no soquete do processador"
+            />
+            <h2><span>Manutenção</span>Eletrônicos</h2>
+          </div>
+        </div>
+        <div class="colB">
+          <div class="card">
+            <img
+              src="https://images.unsplash.com/photo-1604754742629-3e5728249d73?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
+              alt="Imagem de um técnico instalando uma placa de video em um pc desktop "
+            />
+            <h2><span>Montagem</span>Desktops</h2>
+          </div>
+        </div>
+        <div class="colC">
+          <div class="card">
+            <img
+              src="https://images.unsplash.com/photo-1627281795244-0f5db916344a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1085&q=80"
+              alt="Imagem de um pc gamer com rgb"
+            />
+            <h2><span>Orçamento</span>Pc Gamer</h2>
+          </div>
+        </div>
+        <div class="colD">
+          <div class="card">
+            <img
+              src="https://images.unsplash.com/photo-1624571395775-253d9666612b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
+              alt="Imagem de uma mulher usando um notebook windows da hp"
+            />
+            <h2><span>Otimização</span>Windows</h2>
+          </div>
+        </div>
+        
+      </main>
+    </div>
   </body>
 </html>
