index and style updated

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Últimos Trabalhos</title>
+    <link rel="stylesheet" href="./style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400;800&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="page">
       <header>
-        <h4>Recentes</h4>
+        <p>Recentes</p>
         <h1>Trabalhos</h1>
       </header>
       <main>
@@ -55,7 +55,6 @@
             <h2><span>Otimização</span>Windows</h2>
           </div>
         </div>
-        
       </main>
     </div>
   </body>
