--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="page">
       <header>
-        <p>Recentes</p>
+        <h4>Recentes</h4>
         <h1>Trabalhos</h1>
       </header>
       <main>
