--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:image" content="Assets/Page_Print.png">
     <title>Últimos Trabalhos</title>
     <link rel="stylesheet" href="./style.css" />
     <link
