--- a/index.html
+++ b/index.html
@@ -5,7 +5,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:image" content="Assets/Page_Print.png">
+    <meta property="og:title" content="Últimos Trabalhos" />
+    <meta
+      property="og:url"
+      content="https://piluvitu.github.io/Projeto05-Explorer/"
+    />
+    <meta
+      property="og:image"
+      content="https://github.com/PiluVitu/Projeto05-Explorer/blob/main/Assets/Page_Print.png"
+    />
+    <meta
+      property="og:description"
+      content="Venha ver os últimos trabalhos que eu fiz "
+    />
+    <meta property="og:locale" content="pt-BR" />
     <title>Últimos Trabalhos</title>
     <link rel="stylesheet" href="./style.css" />
     <link
