--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       property="og:image"
       content="https://github.com/PiluVitu/Projeto05-Explorer/blob/main/Assets/Page_Print.png"
     />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="600" />
     <meta
       property="og:description"
       content="Venha ver os últimos trabalhos que eu fiz "
